<?xml version="1.0" encoding="utf-8"?>
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bluetooth</string>
    <string name="modulename">Device Name:</string>
    <string name="modulepassword">PIN Number:</string>
    <string name="autoanswer">AutoAnswer:</string>
    <string name="autoconnect">AutoConnect:</string>
    <string name="busy_talking">Talking busy,Please try later!</string>
    <string name="busy_loadingphonebook">Loading phonebook,Please try later!</string>
    <string name="busy_scanningdevice">Scaning device,Please try later!</string>
    <string name="matchdevice">Paired devices</string>
    <string name="searchdevice">Available devices</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="not_available">N/A</string>
    <string name="LA">A</string>
    <string name="LB">B</string>
    <string name="LC">C</string>
    <string name="LD">D</string>
    <string name="LE">E</string>
    <string name="LF">F</string>
    <string name="LG">G</string>
    <string name="LH">H</string>
    <string name="LI">I</string>
    <string name="LJ">J</string>
    <string name="LK">K</string>
    <string name="LL">L</string>
    <string name="LM">M</string>
    <string name="LN">N</string>
    <string name="LO">O</string>
    <string name="LP">P</string>
    <string name="LQ">Q</string>
    <string name="LR">R</string>
    <string name="LS">S</string>
    <string name="LT">T</string>
    <string name="LU">U</string>
    <string name="LV">V</string>
    <string name="LW">W</string>
    <string name="LX">X</string>
    <string name="LY">Y</string>
    <string name="LZ">Z</string>
    <string name="LJH">#</string>
    <string name="search">Search</string>
    <string name="bluetooth_device_context_connect">Connection?</string>
    <string name="bluetooth_device_context_disconnect">Disconnect?</string>
    <string name="musicnumber">(%1$s/%1$s)</string>
    <string name="btmusic">A2DP</string>
    <string name="alarm">Bluetooth is not connected!</string>
    <string name="operator">China</string>
    <string name="operator_name_cmcc">CMCC</string>
    <string name="operator_name_cucc">CUCC</string>
    <string name="operator_name_ctc">CTC</string>
    <string name="city">City</string>
    <string name="btdisconnected">Bluetooth Disconnect</string>
    <string name="pleaseconnectedbt">Please connect with the phone</string>
    <string name="unknown">unknown</string>
    <string name="api_key">401381f3894e617130a6c055f74b86eb</string>
    <string name="secret">your_api_key</string>
</resources>
