<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:id="@+id/alarm_part"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/bt_anim"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/not_available"
            android:src="@drawable/bt_animated" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/slate_light"
                android:singleLine="true"
                android:textColor="#505050"
                android:textSize="20sp"
                android:text="@string/modulename"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/slate_light"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/not_available"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/slate_light"
                android:singleLine="true"
                android:textColor="#505050"
                android:textSize="20sp"
                android:text="@string/modulepassword"/>

            <TextView
                android:id="@+id/tv_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/slate_light"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/not_available"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/slate_light"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/btdisconnected"
            android:textColor="#505050"
            android:textSize="21.13sp" />

        <TextView
            android:id="@+id/bt_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ellipsize="end"
            android:fontFamily="@font/slate_light"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/pleaseconnectedbt"
            android:textColor="#505050"
            android:textSize="12.27sp" />
    </LinearLayout>

</FrameLayout>